<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

 <fragment

    android:layout_width="150dp"
    android:layout_height="160dp"
    android:id="@+id/map"
    tools:context="com.example.eku.dry_ticket_project.activity.ContactUs"
    android:name="com.google.android.gms.maps.SupportMapFragment" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="Address: PO BOX: 654,
         Parramatta, NSW, 2124,Australia

        Fax: (02) 8076 3129

        Email: info@drytickets.com.au"
        android:id="@+id/address"
        android:layout_marginLeft="160dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="For any enquiry"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/map"
        android:id="@+id/text"
        android:textColor="@color/red"
        android:textStyle="italic"/>


<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/contactus1"
    android:hint="@string/name"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_below="@+id/text"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contactus2"
        android:hint="@string/phone"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"

        android:layout_below="@+id/contactus1"
      />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contactus3"
        android:hint="@string/email"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
       android:layout_below="@+id/contactus2"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contactus4"
        android:hint="@string/msg"
       android:layout_gravity="center"
        android:layout_marginTop="10dp"
       android:layout_below="@+id/contactus3"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send"
        android:layout_below="@+id/contactus4"
        android:text="@string/send"

        android:background="@color/reddish"/>
</RelativeLayout>
    </ScrollView>
</LinearLayout>