<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/flag3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:padding="10dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/Desc"
        android:layout_below="@+id/flag3"
        android:textColor="@color/red"
        />
    <TextView
        android:id="@+id/desc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_toRightOf="@+id/description"
        />
    <TextView
        android:id="@+id/datee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/date"
        android:textColor="@color/red"
        android:layout_below="@+id/description"
       />

    <TextView
        android:id="@+id/date3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_below="@+id/desc3"
        android:layout_toRightOf="@+id/datee" />
    />
    <TextView
        android:id="@+id/timee3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/time"
        android:layout_below="@+id/datee"

        android:textColor="@color/red"/>
    <TextView
        android:id="@+id/time3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_below="@+id/date3"
        android:layout_toRightOf="@+id/timee"
        />
    <TextView
        android:id="@+id/pricee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/price"
        android:layout_below="@+id/time3"

        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/price3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time3"
        android:textSize="25sp"

        android:textColor="@color/red"
        android:layout_toRightOf="@+id/pricee"

        />
    <TextView
        android:id="@+id/venuee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/venue"
        android:textColor="@color/red"

        android:layout_below="@+id/price3"
        />
    <TextView

        android:id="@+id/venue3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_below="@+id/price3"
        android:layout_toRightOf="@+id/venuee"

        />
</RelativeLayout>